12S20020|Wahyu Krisdangolyanti Simamora|2020|Information Systems
12S19036|Lucas Ronaldi Hutabarat|2019|Information Systems
12S19038|Pabertoni Panjaitan|2019|Information Systems
12S3102|12S20047|2020/2021|odd|None
KUS4101|12S20021|2020/2021|odd|None
KUS4101|12S20053|2020/2021|odd|None
12S3103|12S20050|2021/2022|odd|None
12S3102|12S20034|2020/2021|odd|None
12S2202|12S20012|2021/2022|odd|None
12S4003|12S20023|2020/2021|even|None
FIS1103|12S20010|2021/2022|odd|None
12S3101|12S20022|2021/2022|odd|None
12S1102|12S20050|2021/2022|odd|None
",

        "input": 
course-add#12S2203#Object-oriented Programming#3#C
course-add#10S1002#Pemrograman Prosedural#2#D
student-add#12S20999#Wiro Sableng#2020#Information Systems
enrollment-add#12S2203#12S20999#2021/2022#even
student-add#12S20111#Jaka Sembung#2019#Information Systems
enrollment-add#12S2203#12S20000#2020/2021#even
enrollment-add#12S2200#12S20000#2020/2021#odd
    ---
        ",
        "output": "invalid student|12S20000
        invalid course|12S2200
        10S1002|Pemrograman Prosedural|2|D
        12S2203|Object-oriented Programming|3|C
        12S20999|Wiro Sableng|2020|Information Systems
        12S20111|Jaka Sembung|2019|Information Systems
        12S2203|12S20999|2021/2022|even|None
        ",

"input": 
"course-add#12S2203#Object-oriented Programming#3#C
course-add#10S1002#Pemrograman Prosedural#2#D
enrollment-add#12S2203#12S20999#2021/2022#even
student-add#12S20999#Wiro Sableng#2020#Information Systems
enrollment-add#12S2203#12S20999#2021/2022#even
student-add#12S20111#Jaka Sembung#2019#Information Systems
enrollment-add#12S2200#12S20000#2020/2021#odd
---
",
        "output": "invalid student|12S20999
        invalid course|12S2200
        10S1002|Pemrograman Prosedural|2|D
        12S2203|Object-oriented Programming|3|C
        12S20999|Wiro Sableng|2020|Information Systems
        12S20111|Jaka Sembung|2019|Information Systems
        12S2203|12S20999|2021/2022|even|None
        ",